[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Fantasy High <shacohigh@gmail.com>"]
description = ""
name = "s10bot"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0"
python = "^3.7"
python-dotenv = "^0.11.0"
flask = "^2.2"
[tool.poetry.dev-dependencies]
